Se añadio el archivo de la página html con el contenido en desarrollo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-main, initial-scale=1.0"/>
     <link rel="stylesheet" href="index.css"/>
     <title>Página del repositorio</title>
+    <style>
+        h1, h2, a {
+            font-family: sans-serif;
+        }
+    </style>
+
 </head>
 
 <header>
@@ -14,8 +20,14 @@
 <body>
     <h1>Bienvenido a mi página web</h1>
     <br>
-    <a href="https://twitter.com/explore/tabs/trending">CLICK AQUÍ PARA VER LAS ULTIMAS TENDENCIAS DEL MUNDO</a>
+    <a class="pagina_favorita" href="https://twitter.com/explore/tabs/trending">CLICK AQUÍ PARA VER LAS ULTIMAS TENDENCIAS DEL MUNDO</a>
     <br>
+
+    <h2>Sobre mí</h2>
+
+    <img src="assets/mi-foto.png" alt="Mí foto" width="30%">
+
+
 
     <nav> contenido de navegación </nav>
     <main> contenido principal </main>
