Se añadieron los links de los repositorios de actividades

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <a href="#">Mis Hobbies</a>
     <a href="#">Mí Receta</a>
     <a href="#">Mi Rutina</a>
+    <a href="https://github.com/MiguelArangoE/amd">Sitio web: Empresa AMD</a>
+    <a href="https://github.com/MiguelArangoE/javascript/tree/main">Ejercicios JS</a>
   </nav>
 </header>
 
