--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         profundice, la cual es la del <b>diseño web</b>.
       </p>
       <img
-        src="mi-foto.png"
+        src="assets/mi-foto.png"
         alt="Foto de los 15 años de mi sobrina"
         style="width: 70%; border-radius: 2%"
       />
@@ -171,6 +171,6 @@
       <i class="fa-brands fa-whatsapp fa-beat"></i>
       <a>+57 310 2626793</a>
     </div>
-    <img src="gato.png" width="50%" style="margin: 25px;">
+    <img src="assets/gato.png" width="50%" style="margin: 25px;">
   </div>
 </footer>
