--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         profundice, la cual es la del <b>diseño web</b>.
       </p>
       <img
-        src="assets/mi-foto.png"
+        src="assets/mi-foto.jpg"
         alt="Foto de los 15 años de mi sobrina"
         style="width: 70%; border-radius: 2%"
       />
