--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="main.css" />
   <title>Presentación</title>
+
+  <style>
+    
+  </style>
+
 </head>
 
-<header class="header">
-  <a>Este es el encabezado de la página</a>
+<!-- <header class="header">
   <nav>
     <a href="#">Sobre mí</a>
     <a href="#">Mis Hobbies</a>
@@ -24,7 +28,7 @@
     <a href="https://github.com/MiguelArangoE/amd">Sitio web: Empresa AMD</a>
     <a href="https://github.com/MiguelArangoE/javascript/tree/main">Ejercicios JS</a>
   </nav>
-</header>
+</header> -->
 
 <body>
   <div class="wrapper">
@@ -104,7 +108,7 @@
       </ul>
       <h4>CANCIONES PREFERIDAS</h4>
       <iframe class="center" width="100%" height="200vw" src="https://www.youtube.com/embed/hdf7gIW_hls" title="SiM - A (OFFICIAL VIDEO)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      <iframe width="100%" height="200vw" src="https://www.youtube.com/embed/bpLaR7pkLJI?&autoplay=1" title="ENTERTAINMENT - Milli" allow="autoplay"></iframe>
+      <!-- <iframe width="100%" height="200vw" src="https://www.youtube.com/embed/bpLaR7pkLJI?&autoplay=1" title="ENTERTAINMENT - Milli" allow="autoplay"></iframe> -->
 
     </aside>
 
