--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
 
 </head>
 
-<!-- <header class="header">
+<header class="header">
   <nav>
-    <a href="#">Sobre mí</a>
-    <a href="#">Mis Hobbies</a>
-    <a href="#">Mí Receta</a>
-    <a href="#">Mi Rutina</a>
-    <a href="https://github.com/MiguelArangoE/amd">Sitio web: Empresa AMD</a>
-    <a href="https://github.com/MiguelArangoE/javascript/tree/main">Ejercicios JS</a>
+    <a href="https://github.com/MiguelArangoE" target="_blank">
+      <i class="fa-regular fa-folder-open"></i>
+      Repositorios</a>
+    <a href="https://miguelarangoe.github.io/amd/" target="_blank">
+      <i class="fa-solid fa-laptop"></i>
+      Empresa AMD</a>
+    <a href="https://miguelarangoe.github.io/javascript/" target="_blank">
+      <i class="fa-brands fa-square-js"></i>
+      Ejercicios JS</a>
   </nav>
-</header> -->
+</header>
 
 <body>
   <div class="wrapper">
@@ -152,9 +155,9 @@
       />
     </aside>
 
-    <div class="footer">
+    <!-- <div class="footer">
       <h1>Body Footer W.I.P</h1>
-    </div>
+    </div> -->
   </div>
 
   <script
